# dora-experimental

./: LICENSE  README.md
dev-cmd/: loop.sh  start-kubos-services.sh
dora-health-app/: Cargo.toml  README.md  manifest.toml
dora-health-app/src/: main.rs  system_info.rs  vector_math.rs
dora-radio-service/: Cargo.toml  S99dora-radio-service.sh
dora-radio-service/src/: config.toml  main.rs  model.rs  schema.rs
dora-sensor-service/: S99dora-sensor-service.sh  config.toml  dora-sensor-service.py  requirements.txt
dora-sensor-service/service/: models.py  schema.py
dora-service/: README.md  S99dora-service.sh  config.toml  dora-service.py  requirements.txt
dora-service/service/: hw_vcnl4040.py  models.py
dora-track-app/: dora-track-app.py  hw_scmd.py
tasks/: README.md  dora-idle-mode.json
